[package]
name = "tensogram-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tensogram"
path = "src/main.rs"

[features]
default = []
grib = ["dep:tensogram-grib"]

[dependencies]
tensogram-core = { path = "../tensogram-core" }
tensogram-grib = { path = "../tensogram-grib", optional = true }
ciborium.workspace = true
clap.workspace = true
serde_json.workspace = true
