[package]
name = "tensogram-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
mmap = ["dep:memmap2"]
async = ["dep:tokio"]

[dependencies]
tensogram-encodings = { path = "../tensogram-encodings" }
thiserror.workspace = true
ciborium = { workspace = true }
serde.workspace = true
xxhash-rust.workspace = true
sha1.workspace = true
md5.workspace = true
memmap2 = { version = "0.9", optional = true }
tokio = { version = "1", features = ["fs", "rt"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
