[package]
name = "tensogram-core"
version = "0.8.0"
edition = "2021"

[features]
default = ["szip", "zstd", "lz4", "blosc2", "zfp", "sz3"]
mmap = ["dep:memmap2"]
async = ["dep:tokio"]
# Compression feature gates — forwarded to tensogram-encodings
szip = ["tensogram-encodings/szip"]
zstd = ["tensogram-encodings/zstd"]
lz4 = ["tensogram-encodings/lz4"]
blosc2 = ["tensogram-encodings/blosc2"]
zfp = ["tensogram-encodings/zfp"]
sz3 = ["tensogram-encodings/sz3"]

[dependencies]
tensogram-encodings = { path = "../tensogram-encodings" }
thiserror.workspace = true
ciborium = { workspace = true }
serde.workspace = true
xxhash-rust.workspace = true
uuid.workspace = true
tracing.workspace = true
memmap2 = { version = "0.9", optional = true }
tokio = { version = "1", features = ["fs", "rt"], optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
