[package]
name = "tensogram-core"
version = "0.9.1"
edition = "2021"

[features]
default = ["szip", "zstd", "lz4", "blosc2", "zfp", "sz3"]
mmap = ["dep:memmap2"]
async = ["dep:tokio"]
remote = ["dep:object_store", "dep:url", "dep:bytes", "dep:tokio"]
# Compression feature gates — forwarded to tensogram-encodings
szip = ["tensogram-encodings/szip"]
szip-pure = ["tensogram-encodings/szip-pure"]
zstd = ["tensogram-encodings/zstd"]
zstd-pure = ["tensogram-encodings/zstd-pure"]
lz4 = ["tensogram-encodings/lz4"]
blosc2 = ["tensogram-encodings/blosc2"]
zfp = ["tensogram-encodings/zfp"]
sz3 = ["tensogram-encodings/sz3"]

[dependencies]
tensogram-encodings = { path = "../tensogram-encodings", default-features = false }
thiserror.workspace = true
ciborium = { workspace = true }
serde.workspace = true
xxhash-rust.workspace = true
uuid.workspace = true
tracing.workspace = true
memmap2 = { version = "0.9", optional = true }
tokio = { version = "1", features = ["fs", "rt"], optional = true }
# Remote object store access (S3, GCS, Azure, HTTP)
object_store = { version = "0.13", default-features = false, features = ["aws", "gcp", "azure", "http"], optional = true }
url = { version = "2", optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
