[package]
name = "tensogram-grib"
version = "0.9.1"
edition = "2021"
description = "GRIB to Tensogram format converter using ecCodes"

[dependencies]
tensogram-core = { path = "../tensogram-core" }
tensogram-encodings = { path = "../tensogram-encodings" }
eccodes = { version = "0.14", default-features = false }
thiserror = "2"
ciborium = "0.2"

[dev-dependencies]
tempfile = "3"
