[package]
name = "tensogram-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "tensogram"
crate-type = ["cdylib"]

[dependencies]
tensogram-core = { path = "../tensogram-core" }
tensogram-encodings = { path = "../tensogram-encodings" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ciborium.workspace = true
serde.workspace = true
serde_json = "1"
