[package]
name = "tensogram-python"
version = "0.8.0"
edition = "2021"

[lib]
name = "tensogram"
crate-type = ["cdylib"]

[dependencies]
tensogram-core = { path = "../tensogram-core" }
tensogram-encodings = { path = "../tensogram-encodings" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
