[package]
name = "tensogram-wasm"
version = "0.9.0"
edition = "2021"
description = "WebAssembly bindings for the Tensogram N-tensor message format"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tensogram-core = { path = "../tensogram-core", default-features = false, features = [
    "lz4",
    "szip-pure",
    "zstd-pure",
] }
ciborium = "0.2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
js-sys = "0.3"
# uuid needs the `js` feature for getrandom in WASM
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
