# (C) Copyright 2026- ECMWF and individual contributors.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation nor
# does it submit to any jurisdiction.

# Dependency manifest for the Jupyter notebook examples.
#
# Not a published package — exists so that users and CI can install
# everything needed to run the notebooks with a single command:
#
#     uv pip install -e examples/jupyter
#
# The version tracks the root VERSION file (see AGENTS.md).

[project]
name = "tensogram-jupyter-examples"
version = "0.18.0"
description = "Jupyter notebook examples for the Tensogram tensor message format"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ECMWF", email = "software@ecmwf.int" }]
readme = "README.md"

dependencies = [
    # Core — always required.
    "tensogram>=0.18.0,<0.19",
    "numpy>=1.26",
    "matplotlib>=3.8",

    # Notebook runtime.
    "jupyterlab>=4.0",
    "ipykernel>=6.0",

    # Used by notebook 04 to generate the demo NetCDF input.
    "netCDF4>=1.6",

    # xarray surfaces as a *sub-section* of notebook 04 (convert NetCDF
    # → Tensogram → xarray Dataset). The xarray backend package pulls
    # xarray itself in as a dependency.
    "tensogram[xarray]>=0.18.0,<0.19",
]

[project.optional-dependencies]
# Dev extras used by CI and by the structural test
# (python/tests/test_jupyter_structure.py).
dev = [
    "nbval>=0.11",       # pytest --nbval-lax <dir>
    "nbstripout>=0.7",   # pre-commit hook for output stripping
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://sites.ecmwf.int/docs/tensogram/main"
Repository = "https://github.com/ecmwf/tensogram"
Documentation = "https://sites.ecmwf.int/docs/tensogram/main/guide/jupyter-notebooks.html"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# This is not really a package — the layout is just notebooks + data.
# Tell setuptools so, to keep `pip install -e .` happy.
[tool.setuptools]
packages = []
