[package]
name = "tensogram-rust-examples"
version = "0.9.1"
edition = "2021"
publish = false

[[bin]]
name = "01_encode_decode"
path = "src/bin/01_encode_decode.rs"

[[bin]]
name = "02_mars_metadata"
path = "src/bin/02_mars_metadata.rs"

[[bin]]
name = "03_simple_packing"
path = "src/bin/03_simple_packing.rs"

[[bin]]
name = "04_shuffle_filter"
path = "src/bin/04_shuffle_filter.rs"

[[bin]]
name = "05_multi_object"
path = "src/bin/05_multi_object.rs"

[[bin]]
name = "06_hash_verification"
path = "src/bin/06_hash_verification.rs"

[[bin]]
name = "07_scan_buffer"
path = "src/bin/07_scan_buffer.rs"

[[bin]]
name = "08_decode_variants"
path = "src/bin/08_decode_variants.rs"

[[bin]]
name = "09_file_api"
path = "src/bin/09_file_api.rs"

[[bin]]
name = "11_encode_pre_encoded"
path = "src/bin/11_encode_pre_encoded.rs"

[[bin]]
name = "12_convert_netcdf"
path = "src/bin/12_convert_netcdf.rs"
required-features = ["netcdf"]

[[bin]]
name = "13_validate"
path = "src/bin/13_validate.rs"

[[bin]]
name = "14_remote_access"
path = "src/bin/14_remote_access.rs"
required-features = ["remote"]

[features]
default = []
netcdf = ["dep:tensogram-netcdf"]
remote = ["tensogram-core/remote"]

[dependencies]
tensogram-core = { path = "../../crates/tensogram-core" }
tensogram-encodings = { path = "../../crates/tensogram-encodings" }
tensogram-netcdf = { path = "../../crates/tensogram-netcdf", optional = true }
ciborium = "0.2"
tempfile = "3"
serde_json = "1"
