[package]
name = "tensogram-rust-examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "01_encode_decode"
path = "src/bin/01_encode_decode.rs"

[[bin]]
name = "02_mars_metadata"
path = "src/bin/02_mars_metadata.rs"

[[bin]]
name = "02b_generic_metadata"
path = "src/bin/02b_generic_metadata.rs"

[[bin]]
name = "03_simple_packing"
path = "src/bin/03_simple_packing.rs"

[[bin]]
name = "04_shuffle_filter"
path = "src/bin/04_shuffle_filter.rs"

[[bin]]
name = "05_multi_object"
path = "src/bin/05_multi_object.rs"

[[bin]]
name = "06_hash_verification"
path = "src/bin/06_hash_verification.rs"

[[bin]]
name = "07_scan_buffer"
path = "src/bin/07_scan_buffer.rs"

[[bin]]
name = "08_decode_variants"
path = "src/bin/08_decode_variants.rs"

[[bin]]
name = "09_file_api"
path = "src/bin/09_file_api.rs"

[[bin]]
name = "10_iterators"
path = "src/bin/10_iterators.rs"

[[bin]]
name = "11_encode_pre_encoded"
path = "src/bin/11_encode_pre_encoded.rs"

[[bin]]
name = "11_streaming"
path = "src/bin/11_streaming.rs"

[[bin]]
name = "12_convert_netcdf"
path = "src/bin/12_convert_netcdf.rs"
required-features = ["netcdf"]

[[bin]]
name = "13_validate"
path = "src/bin/13_validate.rs"

[[bin]]
name = "14_remote_access"
path = "src/bin/14_remote_access.rs"
required-features = ["remote"]

[[bin]]
name = "16_multi_threaded_pipeline"
path = "src/bin/16_multi_threaded_pipeline.rs"

[[bin]]
name = "18_remote_scan_trace"
path = "src/bin/18_remote_scan_trace.rs"
required-features = ["remote"]

[features]
default = []
netcdf = ["dep:tensogram-netcdf"]
remote = ["tensogram/remote", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
tensogram = { path = "../../rust/tensogram" }
tensogram-encodings = { path = "../../rust/tensogram-encodings" }
tensogram-netcdf = { path = "../../rust/tensogram-netcdf", optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
ciborium = "0.2"
tempfile = "3"
serde_json = "1"
