[package]
name = "tensogram-python"
version = "0.12.0"
edition = "2021"

[lib]
name = "tensogram"
crate-type = ["cdylib"]

[features]
default = ["async"]
async = ["tensogram-core/async", "dep:pyo3-async-runtimes"]

[dependencies]
tensogram-core = { path = "../../rust/tensogram-core", features = ["remote"] }
tensogram-encodings = { path = "../../rust/tensogram-encodings" }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"], optional = true }
