[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tensogram"
version = "0.13.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.1; python_version>='3.10'",
    "numpy; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.15"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402", "F401", "F541"]  # aspirational examples, not real code yet

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
