[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tensogram"
version = "0.16.0"
description = "Fast binary N-tensor message format for scientific data"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "ECMWF", email = "software@ecmwf.int"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=2.1; python_version>='3.10'",
    "numpy; python_version<'3.10'",
]

[project.urls]
Homepage = "https://sites.ecmwf.int/docs/tensogram/main"
Repository = "https://github.com/ecmwf/tensogram"
Documentation = "https://sites.ecmwf.int/docs/tensogram/main"
Changelog = "https://github.com/ecmwf/tensogram/blob/main/CHANGELOG.md"

[project.optional-dependencies]
xarray = ["tensogram-xarray>=0.16.0,<0.17"]
zarr = ["tensogram-zarr>=0.16.0,<0.17"]
all = ["tensogram[xarray]", "tensogram[zarr]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.15"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402", "F401", "F541"]  # aspirational examples, not real code yet

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
