[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensogram-anemoi"
version = "0.20.0"
description = "anemoi-inference output plugin for tensogram .tgm files"
readme = {text = "anemoi-inference output plugin for tensogram .tgm files", content-type = "text/plain"}
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "ECMWF", email = "software@ecmwf.int"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "tensogram>=0.20.0,<0.21",
    "anemoi-inference>=0.4,<0.11",
    "fsspec",
    "numpy",
]

[project.urls]
Homepage = "https://sites.ecmwf.int/docs/tensogram/main"
Repository = "https://github.com/ecmwf/tensogram"
Documentation = "https://sites.ecmwf.int/docs/tensogram/main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.entry-points."anemoi.inference.outputs"]
tensogram = "tensogram_anemoi.output:TensogramOutput"

[tool.hatch.build.targets.wheel]
packages = ["src/tensogram_anemoi"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "PT",
    "RUF",
]

[tool.ruff.lint.isort]
known-third-party = ["numpy", "tensogram", "anemoi", "fsspec", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
