[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensogram-xarray"
version = "0.15.0"
description = "xarray backend engine for tensogram .tgm files"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "ECMWF", email = "software@ecmwf.int"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "tensogram>=0.15.0,<0.15",
    "xarray>=2022.06",
    "numpy",
]

[project.urls]
Homepage = "https://sites.ecmwf.int/docs/tensogram/main"
Repository = "https://github.com/ecmwf/tensogram"
Documentation = "https://sites.ecmwf.int/docs/tensogram/main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
dask = ["dask[array]"]

[project.entry-points."xarray.backends"]
tensogram = "tensogram_xarray.backend:TensogramBackendEntrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/tensogram_xarray"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF012"]  # mutable class attrs in test mock classes are fine

[tool.ruff.lint.isort]
known-third-party = ["numpy", "xarray", "tensogram", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
