[package]
name = "tensogram-benchmarks"
version.workspace = true
edition.workspace = true
publish = false
description = "Performance benchmarks for the Tensogram encoding pipeline"

[[bin]]
name = "codec-matrix"
path = "src/bin/codec_matrix.rs"

[[bin]]
name = "grib-comparison"
path = "src/bin/grib_comparison.rs"
required-features = ["eccodes"]

[[bin]]
name = "threads-scaling"
path = "src/bin/threads_scaling.rs"

[[bin]]
name = "remote-scan-metrics"
path = "src/bin/remote_scan_metrics.rs"

[[bench]]
name = "encode_pre_encoded"
harness = false

[[bench]]
name = "hash_overhead"
harness = false

[[bench]]
name = "remote_scan"
harness = false

[lib]
name = "tensogram_benchmarks"
path = "src/lib.rs"

[features]
default = []
eccodes = ["dep:eccodes", "dep:eccodes-sys"]

[dependencies]
tensogram-encodings = { path = "../tensogram-encodings" }
tensogram = { path = "../tensogram", features = ["remote", "async"] }
ciborium = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eccodes = { version = "0.14", default-features = false, optional = true }
eccodes-sys = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
xxhash-rust = { workspace = true }
