[package]
name = "tensogram-cli"
version = "0.13.0"
edition = "2021"

[[bin]]
name = "tensogram"
path = "src/main.rs"

[features]
default = []
grib = ["dep:tensogram-grib"]
netcdf = ["dep:tensogram-netcdf"]

[dependencies]
tensogram-core = { path = "../tensogram-core" }
tensogram-grib = { path = "../tensogram-grib", optional = true }
tensogram-netcdf = { path = "../tensogram-netcdf", optional = true }
ciborium.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
