[package]
name = "tensogram-cli"
version = "0.16.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "CLI for inspecting, converting, and manipulating Tensogram .tgm files"
repository = "https://github.com/ecmwf/tensogram"
homepage = "https://sites.ecmwf.int/docs/tensogram/main"
documentation = "https://sites.ecmwf.int/docs/tensogram/main"
readme = "README.md"
keywords = ["tensogram", "cli", "scientific-data", "tensor", "weather"]
categories = ["science", "command-line-utilities"]
authors = ["ECMWF <software@ecmwf.int>"]

[[bin]]
name = "tensogram"
path = "src/main.rs"

[features]
default = []
grib = ["dep:tensogram-grib"]
netcdf = ["dep:tensogram-netcdf"]

[dependencies]
tensogram = { path = "../tensogram", version = "=0.16.0" }
tensogram-grib = { path = "../tensogram-grib", version = "=0.16.0", optional = true }
tensogram-netcdf = { path = "../tensogram-netcdf", version = "=0.16.0", optional = true }
ciborium.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
