[package]
name = "tensogram-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for inspecting, converting, and manipulating Tensogram .tgm files"
documentation = "https://sites.ecmwf.int/docs/tensogram/main"
readme = "README.md"
keywords = ["tensogram", "cli", "scientific-data", "tensor", "weather"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "tensogram"
path = "src/main.rs"

[features]
default = []
grib = ["dep:tensogram-grib"]
netcdf = ["dep:tensogram-netcdf"]

[dependencies]
tensogram = { path = "../tensogram", version = "=0.18.0" }
tensogram-grib = { path = "../tensogram-grib", version = "=0.18.0", optional = true }
tensogram-netcdf = { path = "../tensogram-netcdf", version = "=0.18.0", optional = true }
ciborium.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
