[package]
name = "tensogram-core"
version = "0.16.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "Renamed to `tensogram`. This crate re-exports it for backwards compatibility."
repository = "https://github.com/ecmwf/tensogram"
homepage = "https://sites.ecmwf.int/docs/tensogram/main"
documentation = "https://docs.rs/tensogram"
readme = "README.md"
keywords = ["tensogram", "tensor", "scientific-data", "deprecated", "renamed"]
categories = ["science"]
authors = ["ECMWF <software@ecmwf.int>"]

[dependencies]
tensogram = { version = "=0.16.0" }

[features]
default = ["szip", "zstd", "lz4", "blosc2", "zfp", "sz3", "threads"]
mmap = ["tensogram/mmap"]
async = ["tensogram/async"]
remote = ["tensogram/remote"]
szip = ["tensogram/szip"]
szip-pure = ["tensogram/szip-pure"]
zstd = ["tensogram/zstd"]
zstd-pure = ["tensogram/zstd-pure"]
lz4 = ["tensogram/lz4"]
blosc2 = ["tensogram/blosc2"]
zfp = ["tensogram/zfp"]
sz3 = ["tensogram/sz3"]
threads = ["tensogram/threads"]
