[package]
name = "tensogram-encodings"
version = "0.13.0"
edition = "2021"

[features]
default = ["szip", "zstd", "lz4", "blosc2", "zfp", "sz3", "threads"]
szip = ["dep:libaec-sys"]
szip-pure = ["dep:tensogram-szip"]
zstd = ["dep:zstd"]
zstd-pure = ["dep:ruzstd"]
lz4 = ["dep:lz4_flex"]
blosc2 = ["dep:blosc2", "dep:blosc2-sys"]
zfp = ["dep:zfp-sys-cc"]
sz3 = ["dep:tensogram-sz3"]
# Enables rayon-backed intra-codec parallelism (simple_packing, shuffle).
# Feature is on by default on native targets; consumers targeting `wasm32`
# should build with `default-features = false` and pick the codec features
# they need without `threads`.
threads = ["dep:rayon"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
libaec-sys = { workspace = true, optional = true }
tensogram-szip = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }
blosc2 = { workspace = true, optional = true }
blosc2-sys = { workspace = true, optional = true }
zfp-sys-cc = { workspace = true, optional = true }
tensogram-sz3 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
