[package]
name = "tensogram-encodings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Encoding pipeline and compression codec registry for the Tensogram message format"
documentation = "https://docs.rs/tensogram-encodings"
readme = "README.md"
keywords = ["tensogram", "encoding", "compression", "codec", "scientific-data"]
categories = ["science", "encoding", "compression"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["szip", "zstd", "lz4", "blosc2", "zfp", "sz3", "threads"]
szip = ["dep:libaec-sys"]
szip-pure = ["dep:tensogram-szip"]
zstd = ["dep:zstd"]
zstd-pure = ["dep:ruzstd"]
lz4 = ["dep:lz4_flex"]
blosc2 = ["dep:blosc2", "dep:blosc2-sys"]
zfp = ["dep:zfp-sys-cc"]
sz3 = ["dep:tensogram-sz3"]
# Enables rayon-backed intra-codec parallelism (simple_packing, shuffle).
# Feature is on by default on native targets; consumers targeting `wasm32`
# should build with `default-features = false` and pick the codec features
# they need without `threads`.
threads = ["dep:rayon"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
# Roaring is used by the bitmask companion frame (NTensorFrame).
# Pure-Rust, verified to build on wasm32-unknown-unknown — mandatory
# everywhere, not feature-gated (see plans/WIRE_FORMAT.md §6.5).
roaring = "0.11"
libaec-sys = { workspace = true, optional = true }
tensogram-szip = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }
blosc2 = { workspace = true, optional = true }
blosc2-sys = { workspace = true, optional = true }
zfp-sys-cc = { workspace = true, optional = true }
tensogram-sz3 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[build-dependencies]
# `built` captures Cargo.lock dep versions at compile time for pure-Rust crates.
built = { version = "0.7", features = ["cargo-lock"] }
# `cc` compiles the libaec version shim (only when the `szip` feature is on).
cc = "1"
