[package]
name = "tensogram-ffi"
version = "0.15.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "C FFI bindings for the Tensogram N-tensor message format library"
repository = "https://github.com/ecmwf/tensogram"
homepage = "https://sites.ecmwf.int/docs/tensogram/main"
documentation = "https://docs.rs/tensogram-ffi"
readme = "README.md"
keywords = ["tensogram", "ffi", "c-api", "scientific-data", "bindings"]
categories = ["science", "api-bindings"]
authors = ["ECMWF <software@ecmwf.int>"]
include = ["src/**", "build.rs", "cbindgen.toml", "tensogram.h", "Cargo.toml", "README.md"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tensogram = { path = "../tensogram", version = "=0.15.0" }
tensogram-encodings = { path = "../tensogram-encodings", version = "=0.15.0" }
serde_json = "1"
ciborium.workspace = true
serde.workspace = true

[build-dependencies]
cbindgen = "0.29"
