[package]
name = "tensogram-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C FFI bindings for the Tensogram N-tensor message format library"
documentation = "https://docs.rs/tensogram-ffi"
readme = "README.md"
keywords = ["tensogram", "ffi", "c-api", "scientific-data", "bindings"]
categories = ["science", "api-bindings"]
include = ["src/**", "build.rs", "cbindgen.toml", "tensogram.h", "Cargo.toml", "README.md"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tensogram = { path = "../tensogram", version = "=0.17.0" }
tensogram-encodings = { path = "../tensogram-encodings", version = "=0.17.0" }
serde_json = "1"
ciborium.workspace = true
serde.workspace = true

[build-dependencies]
cbindgen = "0.29"
